auto restart with java 11